--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -3723,85 +3723,72 @@
     }
    ],
    "source": [
-    "# Creating a copy of our data frame to avoid errors in the Y2 model\n",
-    "ipo_data_y2=pd.DataFrame.copy(ipo_data)\n",
+    "# reducing our sample due to in balance between y2=1 and y2=0\n",
     "\n",
-    "# Subsetting the data in order to create a balanced data set between Y2 = 1 and Y2 = 0\n",
-    "df_subset = ipo_data_y2.loc[ipo_data_y2['Y2'] == 1].sample(300)\n",
-    "ipo_data_y2 = ipo_data_y2.drop(df_subset.index)\n",
-    "\n",
-    "# for loop to deal with outliers in float variables\n",
-    "for i in range(len(ipo_data_y2.columns)): \n",
-    "    if ipo_data_y2.iloc[:,i].dtype == float:\n",
-    "        outlier(ipo_data_y2.iloc[:,i],4) \n",
-    "        \n",
-    "# for loop to standardise  float variables        \n",
-    "for i in range(len(ipo_data_y2.columns)): \n",
-    "    if ipo_data_y2.iloc[:,i].dtype == float:  \n",
-    "        ipo_data_y2.iloc[:,i]=standard(ipo_data_y2.iloc[:,i],1)\n",
-    "        \n",
-    "# Our Logistic Regression model with results for y2      \n",
-    "logreg = LogisticRegression()\n",
-    "# This is our  predictor variables,\n",
-    "train=['C3x','C4','C1','C7','C6x','T3x','T4x','T5x','S1x','S2x','S3x','C2']\n",
+    "# for j in range(1,6):\n",
+    "#     for m in range(1,5):\n",
+    "res_hold_f1=[]\n",
+    "res_hold_auc=[]\n",
+    "x=pd.DataFrame.copy(ipo_data)\n",
+    "for i in range(len(x.columns)): \n",
+    "    if x.iloc[:,i].dtype == float:\n",
+    "        outlier(x.iloc[:,i],4)             \n",
+    "        if x.iloc[:,i].dtype == float:   \n",
+    "            x.iloc[:,i]=standard(x.iloc[:,i],3)\n",
+    "for k in range(2,6):\n",
+    "    for count in range (1,500):\n",
     "\n",
     "\n",
+    "        # Create K-means model and determine euclidian distances for each data point\n",
+    "        #train=['C3x','C1','T3xbin','T4x','T5xbin','S1x','S2x','S3x','C2','T2','T1','C6x','Other']\n",
+    "        train=['C2','C7','C5x','S1x','S2x','S3x','T1','T3xbin','T4x','C6xbin','income','Other','Services','Manufacturing']\n",
+    "        X=x[train]\n",
+    "        kmeans_model = KMeans(n_clusters=k)\n",
+    "        distances = kmeans_model.fit_transform(X)\n",
     "\n",
-    "# Setting our predictors\n",
-    "X=ipo_data_y2[train]\n",
+    "        # Create scatter plot using labels from K-means model as color\n",
+    "        labels = kmeans_model.labels_\n",
     "\n",
-    "# Setting our Targer\n",
-    "y=ipo_data_y2['Y2']\n",
     "\n",
-    "# Using recursive feature selection to aide in the selection of predictors\n",
-    "rfe = RFE(logreg, 18)\n",
-    "rfe = rfe.fit(X,y)\n",
+    "        x['labels'] = labels\n",
+    "        train.append('labels')\n",
     "\n",
-    "# Implementing the model\n",
-    "logit_model=sm.Logit(ipo_data_y2['Y2'],ipo_data_y2[train])\n",
-    "result=logit_model.fit()\n",
     "\n",
-    "# Dividing our data set into testing and training, with our test set being of size 0.3. Then fitting the model\n",
-    "X2_train, X2_test, y2_train, y2_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
-    "logreg = LogisticRegression()\n",
-    "logreg.fit(X2_train, y2_train)\n",
+    "        logreg = LogisticRegression()\n",
     "\n",
-    "# Predicting the test set results and calculating the accuracy\n",
-    "y2_pred = logreg.predict(X2_test)\n",
+    "        X=x[train]\n",
     "\n",
-    "# Using a seven fold cross validation to avoid overfitting and train our model\n",
-    "kfold = model_selection.KFold(n_splits=7, random_state=7)\n",
-    "modelCV = LogisticRegression()\n",
-    "scoring = 'accuracy'\n",
-    "results = model_selection.cross_val_score(modelCV, X2_train, y2_train, cv=kfold, scoring=scoring)\n",
+    "        y=x['Y2']\n",
+    "        rfe = RFE(logreg, 18)\n",
+    "        rfe = rfe.fit(X,y)\n",
     "\n",
-    "# Doing a confusion matrix to see our correct and incorrect placements\n",
-    "confusion_matrix_y2 = confusion_matrix(y2_test, y2_pred)\n",
+    "        logit_model=sm.Logit(x['Y2'],x[train])\n",
     "\n",
-    "# Printing results\n",
-    "print(rfe.support_)\n",
-    "print(rfe.ranking_)\n",
-    "print(result.summary())\n",
-    "print('Accuracy of logistic regression classifier on test set: {:.2f}'.format(logreg.score(X2_test, y2_test)))\n",
-    "print(\"10-fold cross validation average accuracy: %.3f\" % (results.mean()))\n",
     "\n",
-    "print(confusion_matrix_y2)\n",
-    "print(classification_report(y2_test, y2_pred))\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
+    "        oversample = pd.concat([X_train,y_train],axis=1)\n",
+    "        max_size = oversample['Y2'].value_counts().max()\n",
     "\n",
-    "# Calculating our AUC/ROC and showing the graph\n",
-    "logit_roc_auc = roc_auc_score(y2_test, logreg.predict(X2_test))\n",
-    "fpr, tpr, thresholds = roc_curve(y2_test, logreg.predict_proba(X2_test)[:,1])\n",
-    "plt.figure()\n",
-    "plt.plot(fpr, tpr, label='Logistic Regression (area = %0.2f)' % logit_roc_auc)\n",
-    "plt.plot([0, 1], [0, 1],'r--')\n",
-    "plt.xlim([0.0, 1.0])\n",
-    "plt.ylim([0.0, 1.05])\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.title('Receiver operating characteristic')\n",
-    "plt.legend(loc=\"lower right\")\n",
-    "#plt.savefig('Log_ROC')\n",
-    "plt.show()"
+    "        lst = [oversample]\n",
+    "        for class_index, group in oversample.groupby('Y2'):\n",
+    "            lst.append(group.sample(max_size-len(group), replace=True))\n",
+    "        X_train = pd.concat(lst)\n",
+    "        y_train=pd.DataFrame.copy(X_train['Y2'])\n",
+    "        del X_train['Y2']\n",
+    "        logreg = LogisticRegression()\n",
+    "        logreg.fit(X_train, y_train)\n",
+    "        y_pred = logreg.predict(X_test)\n",
+    "\n",
+    "        kfold = model_selection.KFold(n_splits=5, random_state=7)\n",
+    "        modelCV = LogisticRegression()\n",
+    "        scoring = 'accuracy'\n",
+    "        results = model_selection.cross_val_score(modelCV, X_train, y_train, cv=kfold, scoring=scoring)\n",
+    "        logit_roc_auc = roc_auc_score(y_test, logreg.predict(X_test))\n",
+    "        #confusion_matrix = confusion_matrix(y_test, y_pred)\n",
+    "        res_hold_f1.append(precision_recall_fscore_support(y_test, y_pred, average='weighted')[2])\n",
+    "        res_hold_auc.append(logit_roc_auc)\n",
+    "    print('Outlier Method {}; Standardise Method {} Kmeans {}'.format(j,m,k))\n",
+    "    print('F1 {:.4f}; AUC {:.4f} '.format(np.mean(res_hold_f1),np.mean(res_hold_auc)))"
    ]
   },
   {
