--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -26,7 +26,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -113,15 +112,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 21,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -419,15 +411,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 22,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -517,15 +502,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 23,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "name": "stdout",
@@ -598,15 +576,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 24,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -791,15 +762,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 25,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -1118,15 +1082,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 26,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -1458,15 +1415,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 27,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "name": "stdout",
@@ -1537,15 +1487,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 28,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -1733,15 +1676,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 29,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -1894,15 +1830,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 30,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -1985,15 +1914,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 31,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "name": "stdout",
@@ -2150,35 +2072,15 @@
     "| 9900-9999          | Non Classifiable                                                   |\n",
     "\n",
     "\n",
-    "However, before being able to classify each record's Industry Division - there were some manual I3 column corrections that needed to be made. There were 61 instances of records where the provided SIC code was incorrect. This was discovered when attempting to link the Inustry title of each SIC code to our records. In order to obtain the correct SIC codes for each record, we utilized the U.S. Securities and Exchange Commission website to search for the company records: (https://www.sec.gov/edgar/searchedgar/companysearch.html)\n",
+    "We created an external function to do this recoding for us, which can be found in the link below.\n",
     "\n",
-    "The list of incorrect I3 codes and their updates are provided here:\n",
-    "\n",
-    "[I3 Updates](https://github.com/ConorFeeney/IS540-Code/blob/master/I3%20Updates.xlsx) \n",
-    "\n",
-    "Once all I3 codes were corrected, we created an external function to perform the recoding to Industry Division. Unfortunately, this Division level included too many breaks (12) to use as a clustering option, as the maximum number of clusters for linear regression is 5. Thankfully, this division summary of the Industry codes gave us ideas to further aggregate based on the provided divisions into a smaller number of levels. We tested a variety of different breaks, including the following:\n",
-    "* Manufacturing vs. \"Other\"\n",
-    "* Labor vs. Non-Labor\n",
-    "* Manufacturing, Services, and \"Other\"\n",
-    "* Manufacturing, Services, Trade and \"Other\"\n",
-    "\n",
-    "The code for this SIC recoding can be found in the link below. \n",
-    "\n",
-    "[Recoding SIC Column](https://github.com/ConorFeeney/IS540-Code/blob/master/Recoding_SIC_Codes.py) \n",
-    "\n"
+    "[Recoding SIC Column](https://github.com/ConorFeeney/IS540-Code/blob/master/Recoding_SIC_Codes.py) "
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 40,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "name": "stdout",
@@ -2250,15 +2152,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 33,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "data": {
@@ -3632,15 +3527,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 41,
    "metadata": {},
->>>>>>> 7375f30dfc19e04d65f63a7cd32065cf64201f79
    "outputs": [
     {
      "name": "stderr",
@@ -3758,9 +3646,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -3979,7 +3865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
