--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -26,7 +26,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -34,7 +33,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danielle.ezzo\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "C:\\Users\\Tim\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n",
+      "C:\\Users\\Tim\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     },
@@ -122,9 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -410,9 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -503,9 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -579,9 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -767,9 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1076,9 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1398,9 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1472,9 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1644,8 +1629,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-893f2b18f1e3>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-893f2b18f1e3>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Examining the charts we can note several points of interest. *C1*, *C6x*, *C7*, *T3x*, *T5x*, *S1x*-*S3x* are all heavily skewed to the right. This is more than likely caused by the presence of extreme values and outliers, which we will be dealing with in the next section. *T4x* is also right skewed, but far less so. The variable C4 is left skewed. For the purposes of our benchmark we will be dealing with this skewness using some powerful, but simple methods.\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Examining the charts we can note several points of interest. *C1*, *C6x*, *C7*, *T3x*, *T5x*, *S1x*-*S3x* are all heavily skewed to the right. This is more than likely caused by the presence of extreme values and outliers, which we will be dealing with in the next section. *T4x* is also right skewed, but far less so. The variable C4 is left skewed. For the purposes of our benchmark we will be dealing with this skewness using some powerful, but simple methods.\n",
     "\n",
@@ -1663,9 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1819,9 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1905,9 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1996,7 +1986,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "### Outliers\n",
@@ -2043,7 +2033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recoding\n",
+    "# Recoding\n",
     "\n",
     "As we saw earlier, there were over 180 unique Standard Industry Classification codes in the *I3* column, which is a significant amount. It was decided to do some research in an attempt to find a method to aggregate codes together in order to create a more manageable number. While conducting research, we realized that the *I3* column was not populated and/or was incorrect for instances. We came to this realization that some instances were incorrect when attempting to link the Industry names found on the SEC website to the provided SIC codes. There were a total of 61 records that needed to be manually updated. We updated these codes by searching for the companies in the following search section of the U.S. Securities and Exchange Commission website:\n",
     "https://www.sec.gov/edgar/searchedgar/companysearch.html\n",
@@ -2073,13 +2063,14 @@
     "\n",
     "We were hoping to use these divisions as a way of clustering the records prior to modeling, to hopefully improve the model fit. Unfortunately, due to the restriction in number of clusters allowed for linear regression models (maximum of 5), we could not stop at this level of categories (12). Thankfully, viewing this summarzied version of divisions gave us additional ideas to how we could aggregate the provided cuts to 5 or less breaks. Below are the various methods of recoding we attempted for the *I3* column to test within our model:\n",
     "\n",
-    "* Industry Divisions (12 breaks, as provided on the SEC website)\n",
-    "* Manufacturing vs. \"Other\" (2 breaks, viewing the \"Manufacturing\" division as one break and bucketing the remaining divisions into an \"other\" bin.\n",
-    "* Technology vs. Non-Tech (2 breaks, viewing Technology companies in one break and bucketing the remaining divisions into an \"other\" bin.\n",
-    "* Manufacturing, Services, and \"Other\" (3 breaks, viewing the \"Manufacturing\" division as one break, combining Services division and Transportation,Communications, Electric, Gas and Sanitary Service Division into another break, and then bucketing the remaining divisions into an \"other\" bin.\n",
-    "* Manufacturing, Services, Trade, and \"Other\" (4 breaks, viewing the \"Manufacturing\" division as one break, combining Services division and Transportation,Communications, Electric, Gas and Sanitary Service Division into another break, combining Retail Trade and Wholesale Trade in another break, and then bucketing the remaining divisions into an \"other\" bin.\n",
-    "* Manufacturing, Services, TCEGS, Trade, and \"Other\" (5 breaks, viewing the \"Manufacturing\" division as one break, Services division as a second break, Transportation,Communications, Electric, Gas and Sanitary Service Division into a third break, combining Retail Trade and Wholesale Trade into a fourth break, and then bucketing the remaining divisions into an \"other\" bin.\n",
-    "* Labor vs. Non-Labor (2 breaks, viewing all divisions that are in the manual labor category as one break, and all other divisions in another break.)\n",
+    "## Industry Divisions (12 breaks, as provided on the SEC website)\n",
+    "We choose to bin these industries in logical group in order to improve our results. We believed that binning similar industries together in various combinations would improve our improve our results. We hoped to identify any patterns in results of F1 and AUC scores.\n",
+    "1. Manufacturing vs. \"Other\" (2 breaks, viewing the \"Manufacturing\" division as one break and bucketing the remaining divisions into an \"other\" bin.\n",
+    "2. Technology vs. Non-Tech (2 breaks, viewing Technology companies in one break and bucketing the remaining divisions into an \"other\" bin.\n",
+    "3. Manufacturing, Services, and \"Other\" (3 breaks, viewing the \"Manufacturing\" division as one break, combining Services division and Transportation,Communications, Electric, Gas and Sanitary Service Division into another break, and then bucketing the remaining divisions into an \"other\" bin.\n",
+    "4. Manufacturing, Services, Trade, and \"Other\" (4 breaks, viewing the \"Manufacturing\" division as one break, combining Services division and Transportation,Communications, Electric, Gas and Sanitary Service Division into another break, combining Retail Trade and Wholesale Trade in another break, and then bucketing the remaining divisions into an \"other\" bin.\n",
+    "5. Manufacturing, Services, TCEGS, Trade, and \"Other\" (5 breaks, viewing the \"Manufacturing\" division as one break, Services division as a second break, Transportation,Communications, Electric, Gas and Sanitary Service Division into a third break, combining Retail Trade and Wholesale Trade into a fourth break, and then bucketing the remaining divisions into an \"other\" bin.\n",
+    "6. Labor vs. Non-Labor (2 breaks, viewing all divisions that are in the manual labor category as one break, and all other divisions in another break.)\n",
     "\n",
     "We created an external function to calculate each of these various methods of recoding for us, which can be found in the link below.\n",
     "\n",
@@ -2087,41 +2078,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     I1                           I2    I3  P(IPO)  P(H)  P(L)    P(1Day)  \\\n",
-      "0    RA         RAILAMERICA INC /DE   4011    15.0  18.0  16.0  13.750000   \n",
-      "1     G                 Genpact LTD   8742    14.0  18.0  16.0  16.750000   \n",
-      "2  HURN  Huron Consulting Group Inc.  8742    15.0  16.0  14.0  18.900000   \n",
-      "3  ICFI     ICF International, Inc.   8742    12.0  16.0  14.0  12.250000   \n",
-      "4  SRVY       GREENFIELD ONLINE INC   8742    13.0  15.0  13.0  18.700001   \n",
-      "\n",
-      "         C1  C2    C3    ...        income  perOffered          P/E  C6xbin  \\\n",
-      "0  4.343805   1  0.30    ...     19.614603   -0.904346  1200.000000       0   \n",
-      "1  4.418841   1  0.19    ...     20.018284   -1.766145  1223.684211       0   \n",
-      "2  5.030438   1 -0.14    ...     18.132999   -1.180865  1042.857143       0   \n",
-      "3  4.941642   1  0.22    ...     17.841576   -1.019638  1204.545455       0   \n",
-      "4  4.553877   1  0.07    ...     17.989898   -1.191712  1335.714286       0   \n",
-      "\n",
-      "   T5xbin  T3xbin  IndDivision  Manufacturing  Other  Services  \n",
-      "0       1       1     Services              0      0         1  \n",
-      "1       2       3     Services              0      0         1  \n",
-      "2       3       1     Services              0      0         1  \n",
-      "3       2       3     Services              0      0         1  \n",
-      "4       2       3     Services              0      0         1  \n",
-      "\n",
-      "[5 rows x 43 columns]\n"
-     ]
-    }
-   ],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "# Add the new data to the end of the table\n",
     "ipo_data.I3 = ipo_data.I3.astype(int) # recoding to correct type\n",
@@ -2164,9 +2122,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6853,9 +6809,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -6893,9 +6847,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -6933,9 +6885,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -6993,9 +6943,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -7099,9 +7047,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -7219,9 +7165,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -7387,7 +7331,7 @@
     "collapsed": true
    },
    "source": [
-    "### Conclusion and Next Steps\n",
+    "### Conclusion\n",
     "As we can see, we have accomplished a decent chunk of work in this first few weeks of this project. We have dealt with missing data, both the official NaN and more hidden ones like negative values in the number of words variables. This was done by replacing the missing values with the mean (except in the case of the dummy variable *C2* as discussed earlier). After this we began our data preperation for modelling.\n",
     "\n",
     "In this section we did a number of tasks, initially we began by attempting to normalise our continuous varaibles using the **log** and **square root** transformations to a acceptable degree success for our base model. We have shown the four methods of how we have dealt with outlies discussed in the Outliers section, as well as shown the three methods of standardising the data with the min - max method for example. We began our recoding of the *I3* variable and successfully recoded it into its sector level. We also  initiated our correlation analysis between continious variables.\n",
@@ -7402,7 +7346,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "### Workload Breakdown\n",
@@ -7416,12 +7360,19 @@
     "\n",
     "This report was written as a team. Danielle wrote the initial first draft, with particular emphasis on her tasks. Tim re-drafted Danielles report and added information to his tasks, Conor completed final draft and added information to his completed tasks.\n",
     "\n",
-    "#### Future Tasks\n",
-    "* Tim: Creation of dummy variables for Days, I3 and binning of variables discussed in normalisation. Taking over of Logistic Regression model to improve using these results\n",
-    "* Danielle: Completing correlation analysis, aiding Tim in logistic regression model as needed, researching and implementing another model generation method (Naive Bayes / Neural network)\n",
-    "* Conor: Passing over of logistic regression code, tidying of standardisation program, creating code for decision tree and potentionally one other method\n",
-    "\n"
+    "\n",
+    "#### Works Cited APA\n",
+    "*Arthurs, Jonathan D. and Busenitz, Lowell W. and Hoskisson, Robert E. and Johnson, Richard, Signaling in New Ventures: The Use and Impact of the Lockup Period at the Time of the Initial Public Offering (2005). Babson College Entrepreneurship Research Conference (BCERC), 2005. Available at SSRN: https://ssrn.com/abstract=1508538 \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -7440,7 +7391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
