--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -4976,6 +4976,231 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>I1</th>\n",
+       "      <th>I2</th>\n",
+       "      <th>I3</th>\n",
+       "      <th>P(IPO)</th>\n",
+       "      <th>P(H)</th>\n",
+       "      <th>P(L)</th>\n",
+       "      <th>P(1Day)</th>\n",
+       "      <th>C1</th>\n",
+       "      <th>C2</th>\n",
+       "      <th>C3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>S1x</th>\n",
+       "      <th>S2x</th>\n",
+       "      <th>S3x</th>\n",
+       "      <th>income</th>\n",
+       "      <th>perOffered</th>\n",
+       "      <th>P/E</th>\n",
+       "      <th>T5xbin</th>\n",
+       "      <th>C6xbin</th>\n",
+       "      <th>T3xbin</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RA</td>\n",
+       "      <td>RAILAMERICA INC /DE</td>\n",
+       "      <td>4011</td>\n",
+       "      <td>0.641954</td>\n",
+       "      <td>0.824184</td>\n",
+       "      <td>0.822854</td>\n",
+       "      <td>0.374296</td>\n",
+       "      <td>0.168441</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.612282</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.843043</td>\n",
+       "      <td>0.986080</td>\n",
+       "      <td>0.014543</td>\n",
+       "      <td>0.921926</td>\n",
+       "      <td>0.863557</td>\n",
+       "      <td>0.933754</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>G</td>\n",
+       "      <td>Genpact LTD</td>\n",
+       "      <td>8742</td>\n",
+       "      <td>0.554610</td>\n",
+       "      <td>0.824184</td>\n",
+       "      <td>0.822854</td>\n",
+       "      <td>0.556322</td>\n",
+       "      <td>0.217686</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.566559</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.710637</td>\n",
+       "      <td>0.295800</td>\n",
+       "      <td>0.638008</td>\n",
+       "      <td>0.971885</td>\n",
+       "      <td>0.119409</td>\n",
+       "      <td>0.990214</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HURN</td>\n",
+       "      <td>Huron Consulting Group Inc.</td>\n",
+       "      <td>8742</td>\n",
+       "      <td>0.641954</td>\n",
+       "      <td>0.623142</td>\n",
+       "      <td>0.623070</td>\n",
+       "      <td>0.681842</td>\n",
+       "      <td>0.754792</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.426483</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.067900</td>\n",
+       "      <td>0.044126</td>\n",
+       "      <td>0.079717</td>\n",
+       "      <td>0.350376</td>\n",
+       "      <td>0.643068</td>\n",
+       "      <td>0.268195</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ICFI</td>\n",
+       "      <td>ICF International Inc.</td>\n",
+       "      <td>8742</td>\n",
+       "      <td>0.376223</td>\n",
+       "      <td>0.623142</td>\n",
+       "      <td>0.623070</td>\n",
+       "      <td>0.290622</td>\n",
+       "      <td>0.683059</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.579145</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.633636</td>\n",
+       "      <td>0.182912</td>\n",
+       "      <td>0.964300</td>\n",
+       "      <td>0.230003</td>\n",
+       "      <td>0.785869</td>\n",
+       "      <td>0.951910</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SRVY</td>\n",
+       "      <td>GREENFIELD ONLINE INC</td>\n",
+       "      <td>8742</td>\n",
+       "      <td>0.464521</td>\n",
+       "      <td>0.501956</td>\n",
+       "      <td>0.502866</td>\n",
+       "      <td>0.670772</td>\n",
+       "      <td>0.324361</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.515663</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.829386</td>\n",
+       "      <td>0.578304</td>\n",
+       "      <td>0.626365</td>\n",
+       "      <td>0.288287</td>\n",
+       "      <td>0.632336</td>\n",
+       "      <td>0.768200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     I1                           I2    I3    P(IPO)      P(H)      P(L)  \\\n",
+       "0    RA         RAILAMERICA INC /DE   4011  0.641954  0.824184  0.822854   \n",
+       "1     G                 Genpact LTD   8742  0.554610  0.824184  0.822854   \n",
+       "2  HURN  Huron Consulting Group Inc.  8742  0.641954  0.623142  0.623070   \n",
+       "3  ICFI      ICF International Inc.   8742  0.376223  0.623142  0.623070   \n",
+       "4  SRVY       GREENFIELD ONLINE INC   8742  0.464521  0.501956  0.502866   \n",
+       "\n",
+       "    P(1Day)        C1  C2        C3   ...         S1x       S2x       S3x  \\\n",
+       "0  0.374296  0.168441   1  0.612282   ...    0.843043  0.986080  0.014543   \n",
+       "1  0.556322  0.217686   1  0.566559   ...    0.710637  0.295800  0.638008   \n",
+       "2  0.681842  0.754792   1  0.426483   ...    0.067900  0.044126  0.079717   \n",
+       "3  0.290622  0.683059   1  0.579145   ...    0.633636  0.182912  0.964300   \n",
+       "4  0.670772  0.324361   1  0.515663   ...    0.829386  0.578304  0.626365   \n",
+       "\n",
+       "     income  perOffered       P/E  T5xbin  C6xbin  T3xbin  labels  \n",
+       "0  0.921926    0.863557  0.933754       1       0       1       3  \n",
+       "1  0.971885    0.119409  0.990214       2       0       3       2  \n",
+       "2  0.350376    0.643068  0.268195       3       0       1       1  \n",
+       "3  0.230003    0.785869  0.951910       2       0       3       2  \n",
+       "4  0.288287    0.632336  0.768200       2       0       3       2  \n",
+       "\n",
+       "[5 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exporting our data set\n",
+    "\n",
+    "#x.to_csv('Model 28_02_18.csv')\n",
+    "ipo_data.I2=ipo_data.I2.str.replace(',', '')\n",
+    "\n",
+    "ipo_data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ipo_data.to_csv('PreProcessed Data.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
